--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,17 @@
 *.sln.docstates
 *.vs
 
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+bld/
+[Bb]in/
+[Oo]bj/
+
 # Prerequisites
 *.d
 
